uat partner api
